syntax = "proto2";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc DelayedSayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  required string name = 1;
}

message HelloReply {
  required string message = 1;
}
